# openapi.admin.yaml
@@ -490,6 +490,11 @@ components:
           type: integer
         description:
           type: string
+        first_blood:
+          type: string
+        first_blood_bonus:
+          format: int32
+          type: integer
         function:
           type: string
         id:
@@ -533,6 +538,7 @@ components:
         - max_attempts
         - logic
         - position
+        - first_blood
         - created_at
         - updated_at
       type: object
@@ -812,6 +818,17 @@ components:
           type: integer
         description:
           type: string
+        first_blood:
+          default: none
+          enum:
+            - none
+            - announce
+            - bonus
+          type: string
+        first_blood_bonus:
+          format: int32
+          minimum: 1
+          type: integer
         function:
           default: static
           enum:
@@ -1225,6 +1242,18 @@ components:
             - "null"
         description:
           type: string
+        first_blood:
+          enum:
+            - none
+            - announce
+            - bonus
+          type: string
+        first_blood_bonus:
+          format: int32
+          minimum: 1
+          type:
+            - integer
+            - "null"
         function:
           enum:
             - static
